# Simples

./: .gitignore  build.gradle  keystore.jks  settings.gradle
app/: CMakeLists.txt  build.gradle  com_song_example_jni_Lame.h  cppfiles.txt
app/src/androidTest/java/: A.java  UriMatcherTest.java
app/src/androidTest/java/test/: Java8Interface.java  Java8InterfaceImpl.java
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/song/example/: ScrollingActivity.java
app/src/debug/res/layout/: activity_scrolling2.xml  content_scrolling2.xml
app/src/debug/res/menu/: menu_scrolling.xml
app/src/debug/res/values/: strings.xml
app/src/demo/java/com/song/example/: Example.java
app/src/full/java/com/song/example/: Example.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/song/example/service/: IMyService.aidl  Point.aidl
app/src/main/cpp/: CMakeLists.txt  bak  build_android.sh  ffmpeg_lib.cpp  ffmpeg_lib.h  lame_lib.cpp  lame_lib.h
app/src/main/java/com/song/example/: LauncherActivity.java  LogTag.java
app/src/main/java/com/song/example/account/: AccountConstants.java  AccountTestActivity.java  AddAccountTestActivity.java  Authenticator.java  ConfirmCredentialsTestActivity.java  SyncAdapter.java  SyncService.java  TestAccountService.java
app/src/main/java/com/song/example/camera/: CameraTestActivity.java
app/src/main/java/com/song/example/dagger/: ActivityScope.java  Api.java  ApiParser.java  ApiService.java  ApplicationComponent.java  ApplicationModule.java  DaggerTestActivity.java  Main6Activity.java  MainTest.java  SimpleApplication.java  TestObject.java  User.java
app/src/main/java/com/song/example/jni/: FFmpeg.java  JNITestActivity.java  Lame.java  PlayerActivity.java  ProgressListener.java
app/src/main/java/com/song/example/launchmodeflag/: AActivity.java  BActivity.java  CActivity.java  DActivity.java  LightStateMachine.java  MainActivity.java  ModeSingleInstanceActivity.java  ModeSingleTaskActivity.java  ModeSingleTopActivity.java  OtherTaskAffinityActivity.java  Util.java
app/src/main/java/com/song/example/nestedscroll/: Main2Activity.java  Main4Activity.java  NestedScrollChildView.java  NestedScrollParentView.java  NestedScrollTestActivity.java  ScrollingActivity.java
app/src/main/java/com/song/example/okhttp/: OkhttpTestActivity.java
app/src/main/java/com/song/example/provider/: BookContent.java  BookProvider.java  ContentAdapter.java  ContentProviderTestActivity.java  DBHelper.java  MainActivity.java
app/src/main/java/com/song/example/rxjava/: Api.java  ApiModule.java  RxJavaTestActivity.java
app/src/main/java/com/song/example/scroller/: Main3Activity.java  ScrollerExampleView.java  ScrollerTestActivity.java
app/src/main/java/com/song/example/service/: BinderActivity.java  BinderService.java  MessengerActivity.java  MessengerService.java  MyReceiver.java  Point.java  RemoteKeyListener.java  ServiceTestActivity.java
app/src/main/java/com/song/example/statemachine/: IState.java  State.java  StateMachine.java
app/src/main/java/com/song/example/tile/: TestTileService.java  TileTestActivity.java
app/src/main/res/color/: aaa.xml
app/src/main/res/layout/: activity_a.xml  activity_account_test.xml  activity_add_account_test.xml  activity_b.xml  activity_c.xml  activity_camera_test.xml  activity_confirm_credentials_test.xml  activity_contentprovider_test.xml  activity_d.xml  activity_dagger_test.xml  activity_jni.xml  activity_jni_list_item.xml  activity_launcher.xml  activity_main.xml  activity_main2.xml  activity_main3.xml  activity_main4.xml  activity_main5.xml  activity_main6.xml  activity_mode_single_instance.xml  activity_mode_single_task.xml  activity_mode_single_top.xml  activity_nested_scroll_test.xml  activity_okhttp_test.xml  activity_other_task_affinity.xml  activity_player.xml  activity_rx_java_test.xml  activity_scroller_test.xml  activity_scrolling.xml  activity_service_binder_impl.xml  activity_service_messenger_impl.xml  activity_service_test.xml  activity_tile_test.xml  content_item.xml  content_main2.xml  content_main5.xml  content_scrolling.xml
app/src/main/res/menu/: menu_scrolling.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: account_preferences.xml  authenticator_test.xml  syncadapter_test.xml
archcomponents/: build.gradle  proguard-rules.pro
ffmpeg-3.3.3/: build_android.sh  config.asm  config.fate  config.h  config.mak
ffmpeg-3.3.3/doc/: config.texi
ffmpeg-3.3.3/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aaccoder.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr_fixed.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adx.d  adx_parser.d  adxdec.d  adxenc.d  aic.d  alac.d  alacenc.d  aliaspixdec.d  (+522 more)
ffmpeg-3.3.3/libavfilter/: aeval.d  af_acrusher.d  af_adelay.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftfilt.d  af_aformat.d  af_agate.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_chorus.d  af_compand.d  af_compensationdelay.d  af_crystalizer.d  af_dcshift.d  af_dynaudnorm.d  af_earwax.d  af_extrastereo.d  af_firequalizer.d  af_flanger.d  af_hdcd.d  af_join.d  af_loudnorm.d  af_pan.d  (+166 more)
ffmpeg-3.3.3/libavformat/: 3dostr.d  4xm.d  aadec.d  ac3dec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aea.d  afc.d  aiffdec.d  aiffenc.d  aixdec.d  anm.d  apc.d  ape.d  apngdec.d  aqtitledec.d  asfcrypt.d  asfdec_f.d  asfdec_o.d  assdec.d  astdec.d  avidec.d  avr.d  avs.d  bethsoftvid.d  bfi.d  bink.d  bintext.d  bit.d  bmv.d  boadec.d  brstm.d  c93.d  cafdec.d  cafenc.d  cavsvideodec.d  (+229 more)
ffmpeg-3.3.3/libavutil/: lzo.d  (+1 more)
otherapp/: build.gradle  proguard-rules.pro
(+31 files in other folders)
